@@ -21,6 +21,11 @@ For a more comprehensive changelog for the latest experimental CVS code, see:
   Sword2:
     - Fixes and cleanups to the end credits. The German credits work now.
 
+  PSP Port:
+    - Fixed a bug that caused Broken Sword 1, and games that use ripped CDDA
+      tracks (most notably the CD version of Monkey Island 1), to stop
+      functioning properly after a while.
+
 0.8.0 (2005-10-30)
  New Games:
    - Added SAGA engine (for the games "I Have No Mouth and I Must Scream"
